[package]
name = "game_mem_utils"
version = "0.2.0"
edition = "2024"

authors = ["ConeDjordjic cone.djordjic@gmail.com"]
description = "A Rust library for reading and writing process memory on Linux, designed for easy trainer creation!"
license = "MIT"
repository = "https://github.com/ConeDjordjic/game-mem-utils"
homepage = "https://github.com/ConeDjordjic/game-mem-utils"
documentation = "https://docs.rs/game-mem-utils"
readme = "README.md"
keywords = ["memory", "gamehacking", "linux", "process"]
categories = ["development-tools", "game-development"]

[lib]
name = "game_mem_utils"
path = "src/lib.rs"
[dependencies]
errno = "0.3.13"
libc = "0.2.174"
memchr = "2.7.5"
regex = "1.11.1"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "basic_pattern_usage"
path = "examples/basic_pattern_usage.rs"
